2007-09-03  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/rnadmins.xml:
	* docbook/Makefile_shared.am_fragment: Added a sabayon 
	screenshot and explained what is new.

2007-09-03  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/release-notes.xml: Added an extra introductory 
	paragraph listing the big changes, press-release style.
	* docbook/Makefile_shared.am_fragment: 
	* docbook/C/rnusers.xml:
	Added a screenshot of GNOME in arabic.
	Removed some useless links.

2007-09-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* docbook/th/th.po: Updated Thai translation.

2007-09-02  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/rninstallation.xml: Updated with the jhbuild list 
	command.
	* docbook/C/rndevelopers.xml:
	* docbook/C/rnlookingforward.xml:
	* docbook/C/rnusers.xml: Corrected some typos, thanks to 
	Priit Laes.

2007-09-02  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* docbook/es/es.po: updated spanish translation

2007-09-02  Daniel Nylander <po@danielnylander.se>

	* docbook/sv/sv.po: Updated Swedish translation.

2007-09-02  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/release-notes.xml:
	* docbook/C/figures/:
	Renamed figure-screenshot.png to rnintroduction-screenshot.png, 
	trying to get the new file version to be installed on the server.
	* docbook/C/rnadmins.xml:
	* docbook/C/rndevelopers.xml:
	* docbook/C/rninstallation.xml:
	* docbook/C/rnusers.xml: Added sect2 IDs, hopefully making the 
	table of contents work.

2007-09-01  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/release-notes.xml: Added a warning that this is a draft.
	* docbook/C/rnadmins.xml:
	* docbook/C/rndevelopers.xml:
	* docbook/C/rnusers.xml:
	Added the content from the draft page on the wiki. Changes should 
	now be made here instead of there.
	* docbook/C/rnlookingforward.xml: Added items for this section, 
	based on the RoadMap.
	* docbook/Makefile_shared.am_fragment: Mentioned the new screenshot 
	files.
