@@ -40,7 +40,7 @@
 
     <sect2 id="rndevelopers-glib">
       <title>Glib</title>
-      <para>The Glib utility library now has a g_get_user_special_dir() that provides the path to special folders defined by <ulink url="/FreeDesktop">FreeDesktop</ulink>.org's <ulink url="http://www.freedesktop.org/wiki/Software/xdg-user-dirs">xdg-user-dirs</ulink> specification and tool.</para>
+      <para>The Glib utility library now has a g_get_user_special_dir() that provides the path to special folders defined by FreeDesktop.org's <ulink url="http://www.freedesktop.org/wiki/Software/xdg-user-dirs">xdg-user-dirs</ulink> specification and tool.</para>
       <para>And for text processing, the new GRegex API provides regular expression string matching without the need for an additional library.</para>
     </sect2>
 
@@ -58,7 +58,7 @@
 				</mediaobject>
 			</figure>
 
-      <para>The improved <ulink url="/OpenType">OpenType</ulink> Layout engine helps Pango to select the correct Glyph depending on the current language.</para>
+      <para>The improved OpenType Layout engine helps Pango to select the correct Glyph depending on the current language.</para>
 
 			<figure>
 				<title>Pango's OpenType layout engine choosing the correct glyph.</title>
@@ -93,9 +93,9 @@
       <para>And you can now right-click on widgets to conveniently make some of these changes: </para>
       <itemizedlist>
         <listitem>Add or remove the parent widget.</listitem>
-        <listitem><para>Insert or remove a placeholder before or after the selected widget in a <ulink url="/GtkBox">GtkBox</ulink>.</para></listitem>
-        <listitem><para>Insert or remove a page before or after the selected page in a <ulink url="/GtkNotebook">GtkNotebook</ulink>.</para></listitem>
-        <listitem><para>Insert or remove a row or column in a <ulink url="/GtkTable">GtkTable</ulink>.</para></listitem>
+        <listitem><para>Insert or remove a placeholder before or after the selected widget in a GtkBox./listitem>
+        <listitem><para>Insert or remove a page before or after the selected page in a GtkNotebook.</para></listitem>
+        <listitem><para>Insert or remove a row or column in a GtkTable.</para></listitem>
       </itemizedlist>
 
       <para>Library authors will be pleased to see that new widgets may be declared in the catalog without the need to write supporting source code, allowing developers to use your extra widgets in Glade.</para>
@@ -129,7 +129,7 @@
 				</mediaobject>
 			</figure>
 
-      <para>For offline documentation, we strongly encourage the use of the <ulink url="/DevHelp">DevHelp</ulink> utility, particularly when searching for function or class names, though you must remember to install the relevant documentation packages from your distribution. <ulink url="/DevHelp">DevHelp</ulink> is also now part of GNOME's official Developer Tools release.</para>
+      <para>For offline documentation, we strongly encourage the use of the DevHelp utility, particularly when searching for function or class names, though you must remember to install the relevant documentation packages from your distribution. DevHelp is also now part of GNOME's official Developer Tools release.</para>
     </sect2>
 
 </sect1>
