@@ -1,3 +1,9 @@
+2007-09-04  Murray Cumming  <murrayc@murrayc.com>
+
+	* docbook/C/rndevelopers.xml: Removed more empty link tags.
+	* docbook/C/figures/rnusers-seahorse-encrypt-multiple-files.png: 
+	Recreated with the new clearlooks themes.
+
 2007-09-03  Murray Cumming  <murrayc@murrayc.com>
 
 	* docbook/C/rnadmins.xml:
